// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a small variant of the component 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-small Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component in loading state 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <svg
    aria-label="Loading component..."
    class="SkeletonContainer"
    data-test-id="cf-ui-skeleton-form"
    height="100%"
    preserveAspectRatio="xMidYMid meet"
    role="img"
    width="240"
  >
    <title>
      Loading component...
    </title>
    <rect
      clip-path="url(#cf-ui-skeleton-clip-0)"
      height="100%"
      style="fill: url(#cf-ui-skeleton-clip-gradient-1);"
      width="100%"
      x="0"
      y="0"
    />
    <defs>
      <clippath
        id="cf-ui-skeleton-clip-0"
      >
        <rect
          data-test-id="cf-ui-skeleton-image"
          height="70"
          rx="0"
          ry="0"
          width="70"
          x="85"
          y="100"
        />
        <rect
          height="16"
          rx="0"
          ry="0"
          width="100"
          x="70"
          y="190"
        />
      </clippath>
      <lineargradient
        id="cf-ui-skeleton-clip-gradient-1"
      >
        <stop
          offset="0%"
          stop-color="#e5ebed"
          stop-opacity="1"
        >
          <animate
            attributeName="stop-color"
            dur="2s"
            id="animation-2"
            repeatCount="indefinite"
            values="#e5ebed; #f7f9fa; #e5ebed"
          />
        </stop>
        <stop
          offset="50%"
          stop-color="#f7f9fa"
          stop-opacity="1"
        >
          <animate
            attributeName="stop-color"
            begin="animation-2.begin+0.25s"
            dur="2s"
            repeatCount="indefinite"
            values="#e5ebed; #f7f9fa; #e5ebed"
          />
        </stop>
        <stop
          offset="100%"
          stop-color="#e5ebed"
          stop-opacity="1"
        >
          <animate
            attributeName="stop-color"
            begin="animation-2.begin+0.5s"
            dur="2s"
            repeatCount="indefinite"
            values="#e5ebed; #f7f9fa; #e5ebed"
          />
        </stop>
      </lineargradient>
    </defs>
  </svg>
</div>
`;

exports[`renders the component with a custom drag handle 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default my-extra-class Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="CardDragHandle"
    data-test-id="cf-ui-card-drag-handle"
  >
    <svg
      class="Icon Icon--small Icon--muted"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
      />
    </svg>
    <span
      class="CardDragHandle__sr-label"
    >
      Reorder card
    </span>
  </div>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with a drag handle 1`] = `
<div>
  <div
    aria-label="picture of a cat"
    class="Card AssetCard AssetCard--size-default my-extra-class Card--padding-none"
    data-test-id="cf-ui-asset-card"
    title="picture of a cat"
  >
    <div
      class="CardDragHandle"
      data-test-id="cf-ui-card-drag-handle"
    >
      <svg
        class="Icon Icon--small Icon--muted"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
        />
      </svg>
      <span
        class="CardDragHandle__sr-label"
      >
        Reorder entry
      </span>
    </div>
    <div
      class="AssetCard__wrapper"
    >
      <div
        class="AssetCard__header"
      />
      <div
        class="AssetCard__content"
      >
        <div
          class="Asset AssetCard__asset"
          data-test-id="cf-ui-asset"
        >
          <div
            class="Asset__image-container"
          >
            <img
              alt="picture of a cat"
              class="Asset__image-container__image"
              src="https://via.placeholder.com/200x300"
            />
          </div>
          <div
            class="Asset__title-container"
          >
            <span
              class="Asset__title-container__title"
            >
              picture of a cat
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with actions 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    >
      <div
        class="Dropdown AssetCard__actions"
        data-test-id="cf-ui-card-actions"
      >
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="IconButton IconButton--secondary"
          data-node-id="dropdown-trigger-61728000"
          data-test-id="cf-ui-icon-button"
          type="button"
        >
          <span
            class="TabFocusTrap IconButton__inner"
            tabindex="-1"
          >
            <svg
              class="Icon Icon--small Icon--primary IconButton__icon"
              data-test-id="cf-ui-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M6 10c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm12 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-6 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
              />
            </svg>
            <span
              class="IconButton__label"
            >
              Actions
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default my-extra-class Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with status 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    >
      <div
        class="Tag Tag--negative"
        data-test-id="cf-ui-tag"
      >
        archived
      </div>
    </div>
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__asset-container"
        >
          <div
            class="Asset__illustration-container"
          >
            <svg
              class="Illustration"
              data-test-id="cf-ui-asset-icon"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                fill="none"
                stroke="#000"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-miterlimit="10"
              >
                <path
                  d="M19.5 23.5H.5V.5h13l6 6z"
                />
                <path
                  d="M13.5.5v6h6M13 11l-3 5.5-2-2-2.5 5h10z"
                />
                <circle
                  cx="7"
                  cy="9"
                  r="1.5"
                />
              </g>
            </svg>
          </div>
          <span
            class="Asset__asset-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component without actions 1`] = `
<div
  aria-label="picture of a cat"
  class="Card AssetCard AssetCard--size-default Card--padding-none"
  data-test-id="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    class="AssetCard__wrapper"
  >
    <div
      class="AssetCard__header"
    />
    <div
      class="AssetCard__content"
    >
      <div
        class="Asset AssetCard__asset"
        data-test-id="cf-ui-asset"
      >
        <div
          class="Asset__image-container"
        >
          <img
            alt="picture of a cat"
            class="Asset__image-container__image"
            src="https://via.placeholder.com/200x300"
          />
        </div>
        <div
          class="Asset__title-container"
        >
          <span
            class="Asset__title-container__title"
          >
            picture of a cat
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
